changed weather.png to weather.PNG so the images would show and fixed the extra margin on the right

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,7 +5,9 @@
 /*5) Courses*/
 /*6) Skills*/
 
-
+/** {
+  border: 1px solid black;
+}*/
 
 
 /*1) Parallax*/
